docker compose funktioniert, files von template in generierten ordner funktioniert
